--- a/recipes/marbled-chocolate-pumpkin-pie.html
+++ b/recipes/marbled-chocolate-pumpkin-pie.html
@@ -7,5 +7,30 @@
 
     <body>
         <h1>Marbled Chocolate Pumpkin Pie</h1>
+
+        <img src="./images/Marbled-Chocolate-Pumpkin-Pie-4x3-6-0a3cf963a09041dba66d6314072c8603.webp" alt="A Marbled Chocolate Pumpkin Pie view from above" width="500">
+
+        <h3>Description</h3>
+        <p>A basic pumpkin pie with melted dark chocolate in some of the fillings and twisted on top.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 ounces semisweet chocolate, finely chopped</li>
+            <li>1 (9 inch) unbaked pie crust</li>
+            <li>1 (16 ounce) can pumpkin puree</li>
+            <li>1 (14 ounce) can sweetened condensed milk</li>
+            <li>3 large eggs</li>
+            <li>1 and a half teaspoons pumpkin pie spice</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 425 degrees F (220 degrees C). Fit pie crust into a 9-inch pie dish and place it on a baking sheet.</li>
+            <li>Melt the chocolate in the microwave or on the top of a double boiler. To melt the finely-chopped chocolate in the microwave, melt it in a microwave-proof bowl in 30-second intervals, stirring between intervals. Take care not to overheat, which will cause the chocolate to burn and become grainy. Set the melted chocolate aside while preparing the remainder of the pie filling.</li>
+            <li>Combine pumpkin puree, condensed milk, eggs, and pumpkin pie spice in a large bowl; mix until combined.</li>
+            <li>Measure a half cup of the pumpkin pie filling and stir it into the bowl of melted chocolate until smooth.</li>
+            <li>Pour the remaining pie filling into the pie shell. Dollop the chocolate pie filling on top. Use a toothpick or butter knife to create a marbled effect by swirling in and out of each of the dollops.</li>
+            <li>Bake in the preheated oven for 15 minutes. Reduce heat to 350 degrees F (175 degrees C) and continue to bake until filling is set, 35 to 40 minutes.Remove from the oven, set on a wire rack, and cool completely before serving.</li>
+        </ol>
     </body>
 </html>
