feat: adiciona receita de dauphinoise potatoes

--- a/recipes/marbled-chocolate-pumpkin-pie.html
+++ b/recipes/marbled-chocolate-pumpkin-pie.html
@@ -11,7 +11,7 @@
         <img src="./images/Marbled-Chocolate-Pumpkin-Pie-4x3-6-0a3cf963a09041dba66d6314072c8603.webp" alt="A Marbled Chocolate Pumpkin Pie view from above" width="500">
 
         <h3>Description</h3>
-        <p>A basic pumpkin pie with melted dark chocolate in some of the fillings and twisted on top.</p>
+        <p>Vallery Lomas was inspired by her favorite pumpkin loaf for this chocolate-y twist on our basic pumpkin pie.</p>
 
         <h3>Ingredients</h3>
         <ul>
