--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/marbled-chocolate-pumpkin-pie.html">Marbled Chocolate Pumpkin Pie</a>
+        <ul>
+            <li><a href="./recipes/marbled-chocolate-pumpkin-pie.html">Marbled Chocolate Pumpkin Pie</a></li>
+            <li><a href="./recipes/dauphinoise-potatoes.html">Dauphinoise Potatoes</a></li>
+        </ul>        
     </body>
 </html>
