feat: adiciona receita green bean casserole

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/marbled-chocolate-pumpkin-pie.html">Marbled Chocolate Pumpkin Pie</a></li>
             <li><a href="./recipes/dauphinoise-potatoes.html">Dauphinoise Potatoes</a></li>
+            <li><a href="./recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
         </ul>        
     </body>
 </html>
