--- a/recipes/dauphinoise-potatoes.html
+++ b/recipes/dauphinoise-potatoes.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Dauphinoise Potatoes</h1>
 
-        <img src="./images/dauphinoise-potatoes-mfs-4x3-56-1-2000-92ba5a83348845dda2068f73ba274704.webp" alt="A pot with dauphinoise potatoes with a spoon raising some creamy ones" width="500">
+        <img src="../images/dauphinoise-potatoes-mfs-4x3-56-1-2000-92ba5a83348845dda2068f73ba274704.webp" alt="A rectangular pot with dauphinoise potatoes with a spoon raising some creamy ones" width="500">
 
         <h3>Description</h3>
         <p>These Dauphinoise potatoes are luscious and creamy. The potatoes will be perfectly seasoned after absorbing all the flavor in the sauce, and come out super tender.</p>
