--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/marbled-chocolate-pumpkin-pie.html">Marbled Chocolate Pumpkin Pie</a></li>
-            <li><a href="./recipes/dauphinoise-potatoes.html">Dauphinoise Potatoes</a></li>
-            <li><a href="./recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
+            <li><a class="recipe-link" href="./recipes/marbled-chocolate-pumpkin-pie.html">Marbled Chocolate Pumpkin Pie</a></li>
+            <li><a class="recipe-link" href="./recipes/dauphinoise-potatoes.html">Dauphinoise Potatoes</a></li>
+            <li><a class="recipe-link" href="./recipes/green-bean-casserole.html">Green Bean Casserole</a></li>
         </ul>        
     </body>
 </html>
