--- a/recipes/marbled-chocolate-pumpkin-pie.html
+++ b/recipes/marbled-chocolate-pumpkin-pie.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Marbled Chocolate Pumpkin Pie - Odin Recipes</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
@@ -11,11 +12,11 @@
         <img src="../images/Marbled-Chocolate-Pumpkin-Pie-4x3-6-0a3cf963a09041dba66d6314072c8603.webp" alt="A Marbled Chocolate Pumpkin Pie view from above" width="500">
 
         <h3>Description</h3>
-        <p>Vallery Lomas was inspired by her favorite pumpkin loaf for this chocolate-y twist on our basic pumpkin pie.</p>
+        <p id="description-paragraph">Vallery Lomas was <strong>inspired by</strong> her favorite pumpkin loaf for this chocolate-y twist on our <b>basic pumpkin pie</b>.</p>
 
         <h3>Ingredients</h3>
         <ul>
-            <li>2 ounces semisweet chocolate, finely chopped</li>
+            <li><i>2 ounces semisweet chocolate, finely chopped</i></li>
             <li>1 (9 inch) unbaked pie crust</li>
             <li>1 (16 ounce) can pumpkin puree</li>
             <li>1 (14 ounce) can sweetened condensed milk</li>
@@ -26,7 +27,7 @@
         <h3>Steps</h3>
         <ol>
             <li>Preheat the oven to 425 degrees F (220 degrees C). Fit pie crust into a 9-inch pie dish and place it on a baking sheet.</li>
-            <li>Melt the chocolate in the microwave or on the top of a double boiler. To melt the finely-chopped chocolate in the microwave, melt it in a microwave-proof bowl in 30-second intervals, stirring between intervals. Take care not to overheat, which will cause the chocolate to burn and become grainy. Set the melted chocolate aside while preparing the remainder of the pie filling.</li>
+            <li><em>Melt the chocolate in the microwave or on the top of a double boiler. To melt the finely-chopped chocolate in the microwave, melt it in a microwave-proof bowl in 30-second intervals, stirring between intervals. Take care not to overheat, which will cause the chocolate to burn and become grainy. Set the melted chocolate aside while preparing the remainder of the pie filling</em>.</li>
             <li>Combine pumpkin puree, condensed milk, eggs, and pumpkin pie spice in a large bowl; mix until combined.</li>
             <li>Measure a half cup of the pumpkin pie filling and stir it into the bowl of melted chocolate until smooth.</li>
             <li>Pour the remaining pie filling into the pie shell. Dollop the chocolate pie filling on top. Use a toothpick or butter knife to create a marbled effect by swirling in and out of each of the dollops.</li>
